chore(security): cấu hình CORS cho React và Swagger UI